--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "build:pages": "ng build --configuration production --base-href /",
+    "deploy": "npm run build:pages && cp dist/yahya-portfolio/browser/index.html dist/yahya-portfolio/browser/404.html && npx angular-cli-ghpages --dir=dist/yahya-portfolio/browser --cname=yahyaarshad.com"
   },
   "prettier": {
     "printWidth": 100,
